config/webhook-admission/admission_configurations_ca_patch.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: $(TLSCERT)
    name: mutating-create-update-terminal.gardener.cloud
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: $(TLSCERT)
    name: validating-create-update-terminal.gardener.cloud
